fix: thumbnail title size change by screen size because the size was too small in PC screen.

--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -2,9 +2,18 @@
 
 .thumbnailTitle {
     font-family: "Noto Serif JP";
+    font-size: 16vw;
     font-weight: 900;
     margin-top: 60;
-    margin-bottom: 60;
+}
+
+@media (hover: hover) {
+    .thumbnailTitle {
+        font-family: "Noto Serif JP";
+        font-size: 8vw;
+        font-weight: 900;
+        margin-top: 60;
+    }
 }
 
 .worksArranger {
